--- a/plugins/maven/src/main/java/org/jetbrains/idea/maven/project/MavenGeneralConfigurable.form
+++ b/plugins/maven/src/main/java/org/jetbrains/idea/maven/project/MavenGeneralConfigurable.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.jetbrains.idea.maven.project.MavenGeneralConfigurable">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="10" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="8" left="8" bottom="8" right="8"/>
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="10" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="455" height="436"/>
     </constraints>
@@ -16,14 +16,12 @@
         </constraints>
         <properties>
           <labelFor value="ca510"/>
-          <text value="Output &amp;Level"/>
+          <text value="Output &amp;level"/>
         </properties>
       </component>
       <component id="ca510" class="javax.swing.JComboBox" binding="comboboxOutputLevel">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="34" height="23"/>
-          </grid>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
@@ -33,12 +31,12 @@
         </constraints>
         <properties>
           <labelFor value="14e1e"/>
-          <text value="&amp;Checksum Policy"/>
+          <text value="&amp;Checksum policy"/>
         </properties>
       </component>
       <component id="14e1e" class="javax.swing.JComboBox" binding="comboboxChecksumPolicy">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
@@ -48,12 +46,12 @@
         </constraints>
         <properties>
           <labelFor value="c58ed"/>
-          <text value="Multiproject Build &amp;Fail Policy"/>
+          <text value="Multiproject build &amp;fail policy"/>
         </properties>
       </component>
       <component id="c58ed" class="javax.swing.JComboBox" binding="comboboxMultiprojectBuildFailPolicy">
         <constraints>
-          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
@@ -63,50 +61,55 @@
         </constraints>
         <properties>
           <labelFor value="4e889"/>
-          <text value="Plugin &amp;Update Policy"/>
+          <text value="Plugin &amp;update policy"/>
         </properties>
       </component>
       <component id="4e889" class="javax.swing.JComboBox" binding="comboboxPluginUpdatePolicy">
         <constraints>
-          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
       <component id="c8328" class="javax.swing.JCheckBox" binding="checkboxWorkOffline">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Work &amp;Offline"/>
+          <margin top="2" left="0" bottom="2" right="3"/>
+          <text value="Work &amp;offline"/>
         </properties>
       </component>
       <component id="2d2f9" class="javax.swing.JCheckBox" binding="checkboxUsePluginRegistry">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Use &amp;Plugin Registry"/>
+          <margin top="2" left="0" bottom="2" right="3"/>
+          <text value="Use &amp;plugin registry"/>
         </properties>
       </component>
       <component id="86396" class="javax.swing.JCheckBox" binding="checkboxRecursive">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Execute Goals &amp;Recursively "/>
+          <margin top="2" left="0" bottom="2" right="3"/>
+          <text value="Execute &amp;goals recursively "/>
         </properties>
       </component>
       <component id="6fd1" class="javax.swing.JCheckBox" binding="checkboxProduceExceptionErrorMessages">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Print &amp;Exception Stack Traces"/>
+          <alignmentY value="0.5"/>
+          <margin top="2" left="0" bottom="2" right="0"/>
+          <text value="Print &amp;exception stack traces"/>
         </properties>
       </component>
       <nested-form id="3edfe" form-file="org/jetbrains/idea/maven/project/MavenEnvironmentForm.form" binding="mavenPathsForm">
         <constraints>
-          <grid row="8" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </nested-form>
       <vspacer id="9cb69">
@@ -114,6 +117,11 @@
           <grid row="9" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
+      <hspacer id="38d7a">
+        <constraints>
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
     </children>
   </grid>
 </form>
