--- a/plugins/maven/src/main/java/org/jetbrains/idea/maven/project/MavenImportingSettingsForm.form
+++ b/plugins/maven/src/main/java/org/jetbrains/idea/maven/project/MavenImportingSettingsForm.form
@@ -1,110 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.jetbrains.idea.maven.project.MavenImportingSettingsForm">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="10" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="4" bottom="4" right="4"/>
+  <grid id="27dc6" binding="myPanel" layout-manager="GridLayoutManager" row-count="8" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="597" height="365"/>
+      <xy x="20" y="20" width="535" height="365"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <vspacer id="5d738">
         <constraints>
-          <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="dd23c" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="myModuleDirControl">
+      <component id="9a961" class="javax.swing.JCheckBox" binding="mySeparateModulesDirCheckBox" default-binding="true">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="142" height="18"/>
+          </grid>
+        </constraints>
+        <properties>
+          <margin top="2" left="0" bottom="10" right="3"/>
+          <text value="&amp;Keep project files in"/>
+        </properties>
+      </component>
+      <component id="b48ca" class="javax.swing.JCheckBox" binding="myCreateModulesForAggregators">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <margin top="2" left="0" bottom="2" right="3"/>
+          <text value="Create IDEA &amp;modules for aggregator projects (with 'pom' packaging)"/>
+        </properties>
+      </component>
+      <component id="2b9b5" class="javax.swing.JCheckBox" binding="myCreateGroupsCheckBox" default-binding="true">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <margin top="2" left="0" bottom="2" right="3"/>
+          <text value="Create module &amp;groups for multi-module Maven projects"/>
+        </properties>
+      </component>
+      <component id="dd23c" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="mySeparateModulesDirChooser">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="7" anchor="1" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="28" height="18"/>
           </grid>
         </constraints>
         <properties/>
       </component>
-      <component id="9a961" class="javax.swing.JCheckBox" binding="myModuleDirCheckBox" default-binding="true">
+      <component id="c2e5e" class="javax.swing.JCheckBox" binding="myUpdateFoldersOnImportCheckBox">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="142" height="18"/>
-          </grid>
+          <grid row="5" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="&amp;Keep project files in"/>
+          <contentAreaFilled value="true"/>
+          <margin top="2" left="0" bottom="2" right="3"/>
+          <text value="Automatically generate sources and update &amp;folders on import using phase"/>
         </properties>
       </component>
-      <component id="d7aa1" class="javax.swing.JCheckBox" binding="myUseExhaustiveSearchCheckBox">
+      <component id="b44e" class="javax.swing.JComboBox" binding="myUpdateFoldersOnImportPhaseComboBox">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="af983" class="javax.swing.JLabel" binding="myProjectFormatLabel">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="E&amp;xhaustive search (look for Maven projects under other Maven projects)"/>
+          <labelFor value="6e3f7"/>
+          <nextFocusableComponent value=""/>
+          <text value="Project forma&amp;t"/>
         </properties>
       </component>
-      <component id="3dfbe" class="javax.swing.JCheckBox" binding="myAutoSyncCheckBox" default-binding="true">
+      <component id="6e3f7" class="javax.swing.JComboBox" binding="myProjectFormatComboBox" custom-create="true">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <text value="Automatically &amp;re-import on project opening"/>
-        </properties>
+        <properties/>
       </component>
-      <component id="b48ca" class="javax.swing.JCheckBox" binding="myCreateModulesForAggregators">
+      <hspacer id="b952">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="1" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <text value="Create &amp;IDEA modules for aggregate projects (with 'pom' packaging)"/>
-        </properties>
-      </component>
-      <component id="2b9b5" class="javax.swing.JCheckBox" binding="myCreateGroupsCheckBox" default-binding="true">
-        <constraints>
-          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Create &amp;module groups for multi-module Maven projects"/>
-        </properties>
-      </component>
+      </hspacer>
       <component id="1b499" class="javax.swing.JCheckBox" binding="myUseMavenOutputCheckBox">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <margin top="2" left="0" bottom="2" right="3"/>
           <text value="Use Maven &amp;output directories"/>
         </properties>
       </component>
-      <grid id="41f33" binding="myFormatPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+      <component id="d7aa1" class="javax.swing.JCheckBox" binding="mySearchRecursivelyCheckBox">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
-        <border type="none"/>
-        <children/>
-      </grid>
-      <grid id="9a78a" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="c2e5e" class="javax.swing.JCheckBox" binding="myUpdateFoldersOnImportCheckBox">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Automatically &amp;generate sources and update folders on import using phase"/>
-            </properties>
-          </component>
-          <component id="814d8" class="javax.swing.JComboBox" binding="myUpdateFoldersOnImportPhaseComboBox">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <maximumRowCount value="8"/>
-            </properties>
-          </component>
-        </children>
-      </grid>
+        <properties>
+          <margin top="2" left="0" bottom="10" right="3"/>
+          <text value="&amp;Search for projects recursively"/>
+        </properties>
+      </component>
     </children>
   </grid>
   <buttonGroups>
