appearance settings: "show window mnemonics" renamed to "show tool-window numbers" + paint bg for split toolwindow buttons (eg Structure)

--- a/platform-impl/src/com/intellij/ide/ui/AppearancePanel.form
+++ b/platform-impl/src/com/intellij/ide/ui/AppearancePanel.form
@@ -3,7 +3,7 @@
   <grid id="41bd3" binding="myPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="81" y="44" width="418" height="602"/>
+      <xy x="81" y="44" width="458" height="630"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -221,26 +221,6 @@
         <properties/>
         <border type="etched" title-resource-bundle="messages/IdeBundle" title-key="group.window.options"/>
         <children>
-          <component id="9264" class="javax.swing.JCheckBox" binding="myAnimateWindowsCheckBox">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <margin top="2" left="2" bottom="2" right="2"/>
-              <selected value="true"/>
-              <text resource-bundle="messages/IdeBundle" key="checkbox.animate.windows"/>
-            </properties>
-          </component>
-          <component id="32072" class="javax.swing.JCheckBox" binding="myWindowShortcutsCheckBox">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <margin top="2" left="2" bottom="2" right="2"/>
-              <selected value="true"/>
-              <text resource-bundle="messages/IdeBundle" key="checkbox.show.window.mnemonics"/>
-            </properties>
-          </component>
           <component id="e4f17" class="javax.swing.JCheckBox" binding="myShowToolStripesCheckBox">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -249,16 +229,6 @@
               <margin top="2" left="2" bottom="2" right="2"/>
               <selected value="true"/>
               <text resource-bundle="messages/IdeBundle" key="checkbox.show.tool.window.bars"/>
-            </properties>
-          </component>
-          <component id="42895" class="javax.swing.JCheckBox" binding="myShowMemoryIndicatorCheckBox">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <margin top="2" left="2" bottom="2" right="2"/>
-              <selected value="true"/>
-              <text resource-bundle="messages/IdeBundle" key="checkbox.show.memory.indicator"/>
             </properties>
           </component>
           <component id="2c9a3" class="javax.swing.JCheckBox" binding="myCbDisplayIconsInMenu">
@@ -277,6 +247,36 @@
             </constraints>
             <properties>
               <text resource-bundle="messages/KeyMapBundle" key="disable.mnemonic.in.menu.check.box"/>
+            </properties>
+          </component>
+          <component id="32072" class="javax.swing.JCheckBox" binding="myWindowShortcutsCheckBox">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <margin top="2" left="2" bottom="2" right="2"/>
+              <selected value="true"/>
+              <text resource-bundle="messages/IdeBundle" key="checkbox.show.tool.window.numbers"/>
+            </properties>
+          </component>
+          <component id="42895" class="javax.swing.JCheckBox" binding="myShowMemoryIndicatorCheckBox">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <margin top="2" left="2" bottom="2" right="2"/>
+              <selected value="true"/>
+              <text resource-bundle="messages/IdeBundle" key="checkbox.show.memory.indicator"/>
+            </properties>
+          </component>
+          <component id="9264" class="javax.swing.JCheckBox" binding="myAnimateWindowsCheckBox">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <margin top="2" left="2" bottom="2" right="2"/>
+              <selected value="true"/>
+              <text resource-bundle="messages/IdeBundle" key="checkbox.animate.windows"/>
             </properties>
           </component>
         </children>
