--- a/plugins/IntelliLang/src/org/intellij/plugins/intelliLang/inject/config/ui/TagPanel.form
+++ b/plugins/IntelliLang/src/org/intellij/plugins/intelliLang/inject/config/ui/TagPanel.form
@@ -41,11 +41,9 @@
               </grid>
             </constraints>
           </component>
-          <component id="eeee3" class="com.intellij.openapi.ui.ComboBox" binding="myNamespace">
+          <component id="eeee3" class="com.intellij.openapi.ui.ComboBox" binding="myNamespace" custom-create="true">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <editable value="true"/>
