--- a/plugins/IntelliLang/src/org/intellij/plugins/intelliLang/inject/config/ui/XmlAttributePanel.form
+++ b/plugins/IntelliLang/src/org/intellij/plugins/intelliLang/inject/config/ui/XmlAttributePanel.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="myRoot" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="500" height="435"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -47,7 +47,7 @@
               </grid>
             </constraints>
           </component>
-          <component id="289e8" class="com.intellij.openapi.ui.ComboBox" binding="myNamespace">
+          <component id="289e8" class="com.intellij.openapi.ui.ComboBox" binding="myNamespace" custom-create="true">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
