--- a/plugins/maven/src/main/java/org/jetbrains/idea/maven/project/MavenImportingSettingsForm.form
+++ b/plugins/maven/src/main/java/org/jetbrains/idea/maven/project/MavenImportingSettingsForm.form
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.jetbrains.idea.maven.project.MavenImportingSettingsForm">
-  <grid id="27dc6" binding="myPanel" layout-manager="GridLayoutManager" row-count="8" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="myPanel" layout-manager="GridLayoutManager" row-count="9" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="535" height="365"/>
+      <xy x="20" y="20" width="457" height="305"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <vspacer id="5d738">
         <constraints>
-          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="9a961" class="javax.swing.JCheckBox" binding="mySeparateModulesDirCheckBox" default-binding="true">
@@ -50,19 +50,9 @@
         </constraints>
         <properties/>
       </component>
-      <component id="c2e5e" class="javax.swing.JCheckBox" binding="myUpdateFoldersOnImportCheckBox">
-        <constraints>
-          <grid row="5" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <contentAreaFilled value="true"/>
-          <margin top="2" left="0" bottom="2" right="3"/>
-          <text value="Automatically generate sources and update &amp;folders on import using phase"/>
-        </properties>
-      </component>
       <component id="b44e" class="javax.swing.JComboBox" binding="myUpdateFoldersOnImportPhaseComboBox">
         <constraints>
-          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
@@ -87,15 +77,6 @@
           <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="1" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="1b499" class="javax.swing.JCheckBox" binding="myUseMavenOutputCheckBox">
-        <constraints>
-          <grid row="6" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <margin top="2" left="0" bottom="2" right="3"/>
-          <text value="Use Maven &amp;output directories"/>
-        </properties>
-      </component>
       <component id="d7aa1" class="javax.swing.JCheckBox" binding="mySearchRecursivelyCheckBox">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -103,6 +84,33 @@
         <properties>
           <margin top="2" left="0" bottom="10" right="3"/>
           <text value="&amp;Search for projects recursively"/>
+        </properties>
+      </component>
+      <component id="1b499" class="javax.swing.JCheckBox" binding="myUseMavenOutputCheckBox">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <margin top="2" left="0" bottom="10" right="3"/>
+          <text value="Use Maven &amp;output directories"/>
+        </properties>
+      </component>
+      <component id="a8ee7" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <labelFor value="b44e"/>
+          <text value="Phase to be used for folders &amp;update"/>
+        </properties>
+      </component>
+      <component id="af117" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font/>
+          <text value="&lt;html&gt;&lt;i&gt;IDEA needs to execute one of the listed phases in order to discover all source folders&lt;br&gt;that are configured via Maven plugins.&lt;br&gt;&lt;b&gt;Note&lt;/b&gt; that all test-* phases firstly generate and compile production sources.&lt;/i&gt;&lt;/html&gt;"/>
         </properties>
       </component>
     </children>
