--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/config/ui/GroovyFacetTab.form
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/config/ui/GroovyFacetTab.form
@@ -30,70 +30,13 @@
           <text resource-bundle="org/jetbrains/plugins/groovy/GroovyBundle" key="copy.groovy.files.to.output"/>
         </properties>
       </component>
-      <grid id="cfb75" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="5" bottom="5" right="5"/>
+      <grid id="cfb75" binding="myManagedLibrariesPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none" title="Groovy-based frameworks"/>
-        <children>
-          <grid id="6ab63" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="15800" class="javax.swing.JButton" binding="myAddButton">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="&amp;Add..."/>
-                </properties>
-              </component>
-              <vspacer id="56a71">
-                <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
-              <component id="adcd0" class="javax.swing.JButton" binding="myRemoveButton">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <enabled value="false"/>
-                  <text value="R&amp;emove"/>
-                </properties>
-              </component>
-              <component id="bddea" class="javax.swing.JButton" binding="myModuleDeps">
-                <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="&amp;View classpath"/>
-                </properties>
-              </component>
-            </children>
-          </grid>
-          <scrollpane id="13cb4">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <minimum-size width="300" height="150"/>
-              </grid>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="b3687" class="javax.swing.JList" binding="myLibraryList">
-                <constraints/>
-                <properties/>
-              </component>
-            </children>
-          </scrollpane>
-        </children>
+        <children/>
       </grid>
       <hspacer id="b104c">
         <constraints>
