--- a/plugins/spellchecker/core/src/com/intellij/spellchecker/options/SpellCheckerOptions.form
+++ b/plugins/spellchecker/core/src/com/intellij/spellchecker/options/SpellCheckerOptions.form
@@ -1,52 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.intellij.spellchecker.options.SpellCheckerOptions">
-  <grid id="27dc6" binding="root" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="root" default-binding="true" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="344" height="458"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <tabbedpane id="a2430">
+      <component id="76b15" class="javax.swing.JRadioButton" binding="projectRB">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="200" height="200"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="shared in project "/>
+        </properties>
+      </component>
+      <component id="4ba70" class="javax.swing.JRadioButton" binding="localRB">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="localy chached"/>
+        </properties>
+      </component>
+      <component id="db28" class="javax.swing.JLabel" binding="globalDictionaries">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Global dictionaries: &lt;not found&gt;"/>
+        </properties>
+      </component>
+      <component id="c933e" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="User's word lists:"/>
+        </properties>
+      </component>
+      <grid id="abbb6" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="250" height="350"/>
           </grid>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="abbb6" layout-manager="BorderLayout" hgap="0" vgap="0">
-            <constraints>
-              <tabbedpane title-resource-bundle="com/intellij/spellchecker/util/SpellCheckerBundle" title-key="user.dictionary"/>
-            </constraints>
+          <component id="85252" class="com.intellij.spellchecker.options.SpellCheckerOptions$WordsPanel" binding="userDictionaryWords" custom-create="true">
+            <constraints border-constraint="Center"/>
             <properties/>
-            <border type="none"/>
-            <children>
-              <component id="85252" class="com.intellij.spellchecker.options.SpellCheckerOptions$WordsPanel" binding="userDictionaryWords" custom-create="true">
-                <constraints border-constraint="Center"/>
-                <properties/>
-              </component>
-            </children>
-          </grid>
-          <grid id="2c033" layout-manager="BorderLayout" hgap="0" vgap="0">
-            <constraints>
-              <tabbedpane title-resource-bundle="com/intellij/spellchecker/util/SpellCheckerBundle" title-key="ignored.words"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="330c8" class="com.intellij.spellchecker.options.SpellCheckerOptions$WordsPanel" binding="ignoredWords" custom-create="true">
-                <constraints border-constraint="Center"/>
-                <properties/>
-              </component>
-            </children>
-          </grid>
+          </component>
         </children>
-      </tabbedpane>
+      </grid>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="additionalDic">
+      <member id="76b15"/>
+      <member id="4ba70"/>
+    </group>
+  </buttonGroups>
   <inspectionSuppressions>
     <suppress inspection="NoLabelFor" id="253a1"/>
     <suppress inspection="NoLabelFor" id="32995"/>
