--- a/java/java-impl/src/com/intellij/refactoring/wrapreturnvalue/WrapReturnValueForm.form
+++ b/java/java-impl/src/com/intellij/refactoring/wrapreturnvalue/WrapReturnValueForm.form
@@ -73,7 +73,7 @@
               <text value="&amp;Package name"/>
             </properties>
           </component>
-          <component id="e72f1" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="packageTextField">
+          <component id="e72f1" class="com.intellij.refactoring.ui.PackageNameReferenceEditorCombo" binding="packageTextField" custom-create="true">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
               <gridbag top="5" left="0" bottom="0" right="0" weightx="1.0" weighty="0.0"/>
@@ -99,7 +99,7 @@
               <text value="Name"/>
             </properties>
           </component>
-          <component id="17eb8" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="existingClassField">
+          <component id="17eb8" class="com.intellij.ui.ReferenceEditorComboWithBrowseButton" binding="existingClassField" custom-create="true">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
               <gridbag weightx="1.0" weighty="0.0"/>
