Javafx: Support application icon in JavaFX self-contained app deployment - show system-dependent paths in dialog, mnemonics in dialog (IDEA-134616)

--- a/plugins/javaFX/src/org/jetbrains/plugins/javaFX/packaging/JavaFxApplicationIconsDialog.form
+++ b/plugins/javaFX/src/org/jetbrains/plugins/javaFX/packaging/JavaFxApplicationIconsDialog.form
@@ -13,7 +13,8 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Linux Icon"/>
+          <labelFor value="153bd"/>
+          <text value="&amp;Linux Icon"/>
         </properties>
       </component>
       <vspacer id="3b423">
@@ -32,7 +33,8 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Mac Icon"/>
+          <labelFor value="4c06e"/>
+          <text value="&amp;Mac Icon"/>
         </properties>
       </component>
       <component id="4c06e" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="myMacIconPath">
@@ -46,7 +48,8 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Windows Icon"/>
+          <labelFor value="8c868"/>
+          <text value="&amp;Windows Icon"/>
         </properties>
       </component>
       <component id="8c868" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="myWindowsIconPath">
