Javafx: Search static property occurrences in FXML using plain text search, remove redundant index. (IDEA-105038, IDEA-105231)

--- a/plugins/javaFX/testData/rename/staticPropertyMethod_after.fxml
+++ b/plugins/javaFX/testData/rename/staticPropertyMethod_after.fxml
@@ -2,4 +2,5 @@
 <?import container.MyCustomContainer?>
 <MyCustomContainer>
   <Button text="abc" MyCustomContainer.newMethodName="123"/>
+  <Button text="abc" MyCustomContainer.newMethodName="42"/>
 </MyCustomContainer>
