--- a/plugins/javaFX/testData/rename/staticPropertyMethod.fxml
+++ b/plugins/javaFX/testData/rename/staticPropertyMethod.fxml
@@ -2,4 +2,5 @@
 <?import container.MyCustomContainer?>
 <MyCustomContainer>
   <Button text="abc" MyCustomContainer.stati<caret>cProp="123"/>
+  <Button text="abc" MyCustomContainer.staticProp="42"/>
 </MyCustomContainer>
